Fix collapsing margins - clearfix w/ display: table
Fix margins collapsing outside the container for non-floating elements
of the container. Margins of floats do not collapse.

`display: table` on ::before and ::after since it is block
element (works w/ clear prop) and it implicitly creates table row
and cell and margins don’t collapse through table-cell elements.

Note: target correct encompassing container w/ .clearfix class.

--- a/4-floats/style.css
+++ b/4-floats/style.css
@@ -42,8 +42,13 @@ main {
   border-radius: .5em;
 }
 
+/* preventing margin collapsing outside the container */
+.clearfix::before,
 .clearfix::after {
-  content: " ";
-  display: block;
+  content:" ";
+  display: table;
+}
+
+.clearfix::after {
   clear: both;
 }
